<resources>
    <string name="app_name">MyBus</string>
    <string name="app_url">www.mybus.com.ar</string>
    <string name="app_store_url">https://play.google.com/store/apps/details?id=com.mybus</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="save_favorite_as">Guardar favorito como</string>
    <string name="spark_digital_title">Spark Digital</string>
    <string name="from_hint">Ingresa tu Origen</string>
    <string name="to_hint">Ingresa tu Destino</string>
    <string name="current_location_marker">Tu Ubicación</string>
    <string name="stop_destination_title">Parada destino</string>
    <string name="stop_origin_title">Parada origen</string>
    <string name="gps_disabled">El GPS se encuentra deshabilitado, deseas habilitarlo?</string>
    <string name="update_playservice">Se necesita el servicio de Google Play actualizado. Desea instalarlo?</string>
    <string name="favorite_confirm_delete_message">Desea eliminar el favorito?</string>
    <string name="bus_route_distance_to_origin">"Distancia desde el origen: %1$s"</string>
    <string name="bus_route_distance_to_destination">"Distancia hasta el destino: %1$s"</string>
    <string name="toast_no_result_found">No se encontraron resultados</string>
    <string name="toast_no_internet">No hay una conexion a Internet</string>
    <string name="toast_searching">Buscando rutas…</string>
    <string name="toast_searching_address">Buscando la direccion especificada…</string>
    <string name="bus_stop_origin"> Parada Origen %1$s</string>
    <string name="bus_stop_mid"> Parada N°: %1$s</string>
    <string name="bus_stop_destination"> Parada Destino %1$s</string>
    <string name="dialog_searching_specific_route">Obteniendo ruta de colectivo</string>
    <string name="displayFaresToolbarTittle">Tarifas</string>
    <string name="displayFavoritesToolbarTittle">Favoritos</string>
    <string name="floating_search_origin">Origen de tu viaje…</string>
    <string name="floating_search_destination">Destino de tu viaje…</string>
    <string name="main_activity_search_hint">Buscar dirección de origen…</string>
    <string name="history_card_view_title">Recientes</string>
    <string name="favorite_card_view_title">Favoritos</string>
    <string name="invalidAddress">Formato de dirección inválido</string>
    <string name="use_current_location">Usar ubicacion actual</string>
    <string name="cant_find_current_location">No es posible saber su ubicacion actual</string>
    <string name="history_no_recent">No hay recientes…</string>
    <string name="search_activity_error_toast">Hubo un error inesperado</string>
    <string name="floating_search_favorite">Ingrese dirección</string>
    <string name="no_favorites_present">No hay favoritos…</string>
    <string name="bus_route_frag_concat_space">%1$s %2$s</string>
    <string name="main_drawer_favorites">Lugares favoritos</string>
    <string name="main_drawer_load_points">Puntos de carga</string>
    <string name="main_drawer_tours">Recorridos</string>
    <string name="main_drawer_fares">Tarifas</string>
    <string name="start_location_title">Origen</string>
    <string name="end_location_title">Destino</string>
    <string name="favorite_confirm_add_message">Desea agregar esta ubicación como favorito?</string>
    <string name="favorite_confirm_delete_title">Elimiar Favorito</string>
    <string name="favorite_confirm_add_title">Agregar Favorito</string>
    <string name="bus_cost">$%1$s</string>
    <string name="toast_no_loading_point_found">No se encontraron puntos de carga</string>
    <string name="dialog_searching_loading_points">Buscando puntos de carga cercanos a usted</string>
    <string name="user_location_dialog_title">Usar ubicación actual</string>
    <string name="user_location_dialog_message">Como desea usar su ubicación actual?</string>
    <string name="use_favorite_dialog_title">Usar favorito</string>
    <string name="use_favorite_dialog_message">Como desea usar el favorito?</string>
    <string name="displayBusLinesToolbarTittle">Recorridos</string>
    <string name="toast_bus_lines_searching">Obteniendo las lineas de colectivo...</string>
    <string name="about">Acerca de</string>
    <string name="about_text">MyBus</string>
    <string name="version_number">1.0</string>
    <string name="version_string">Versión 1.0</string>
    <string name="rights">Rights text</string>
    <string name="rate_this_app">Calificar la aplicación</string>
    <string name="html_link">&lt;a href=%1$s&gt;%2$s</string>
    <string name="charge_point_address">"Direccion: %1$s"</string>
    <string name="charge_point_distance">"Distancia: %1$s metros"</string>
    <string name="charge_point_open_time">"Horario: %1$s"</string>
    <string name="show_all_favorites_on_map">Ver todos en el mapa</string>
    <string name="start_complete_route">Inicio del recorrido - Linea: %1$s</string>
    <string name="mid_complete_route">Retorno - Linea: %1$s</string>
    <string name="end_complete_route">Fin del recorrido - Linea: %1$s</string>
    <string name="searching_complete_route">Cargando recorrido...</string>
    <string name="start_end_complete_route">Inicio/Fin del recorrido - Linea: %1$s</string>
    <string name="toast_no_complete_route">Recorrido no disponible</string>
    <string name="address_not_exists">La direccion buscada no existe</string>
    <string name="down_on">Bajar en:</string>
    <string name="take_second_bus_line">Tomar el segundo colectivo en:</string>
    <string name="bus_route_distance_from_combination">"Distancia desde el trasbordo: %1$s"</string>
    <string name="android_authors">Android: Julián Gonzalez, Lucas Dimitroff, Lucas De Lio</string>
    <string name="powered_by_url">http://www.sparkdigital.com/</string>
    <string name="powered_by">Powered by</string>
    <string name="ux_design_author">UX &amp; Design: Geraldine Gamondes</string>
    <string name="nexus_core_author">Nexus Core: Mario Lucchelli</string>
    <string name="geocoding_url">http://maps.googleapis.com/maps/api/geocode/json?address=%1$s</string>
</resources>
